welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:10: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x=10+y){
              ^